--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "website_portofolio",
   "version": "1.0.0",
-  "description": "",
+  "description": "A static portfolio website built with Flask and Tailwind CSS.",
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Akbar-fitriawan/portofolio-static.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "node",
+    "tailwind",
+    "postcss"
+  ],
+  "author": "akbar_fitriawan",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Akbar-fitriawan/portofolio-static/issues"
@@ -20,6 +24,8 @@
     "tailwindcss": "^3.4.13"
   },
   "scripts": {
-    "build:css": "tailwindcss build src/tailwind.css -o app/static/css/style.css"
+    "build:css": "tailwindcss build src/tailwind.css -o app/static/css/style.css",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   }
 }
