--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "tailwindcss": "^3.4.13"
   },
   "scripts": {
-    "build:css": "tailwindcss build src/tailwind.css -o app/static/css/style.css",
+    "build:css": "tailwindcss build ./app/static/src/input.css -o ./app/static/dist/css/output.css",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
